tests/miniJava/pos/001258_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( new java ( ) ) System.out.println ( { } ) ; } }
