tests/miniJava/neg/006563_mutation.MiniJava
class java { public static void Main ( String [ ] while java ) { { } } }
